<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutMeActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rectangle">

        <ImageButton
            android:id="@+id/btnKembali"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_white"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/about_me"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/rlToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/maulana"/>

    <TextView
        android:id="@+id/tv_myName"
        android:layout_below="@+id/ivProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/my_name"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:layout_below="@+id/tv_myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/my_email"
        android:textSize="15sp"/>

</RelativeLayout>